# ocr-agent

./: .dockerignore  .gitignore  db.sqlite3  dockerfile  pyproject.toml
accounts/: forms.py  urls.py
accounts/templates/accounts/: login.html
core/: settings.py  urls.py
formatter/: forms.py  models.py  services.py  urls.py  views.py
formatter/migrations/: 0001_initial.py
formatter/templates/formatter/: run_detail.html  start.html
llm/: admin.py  client.py  models.py  prompts.py  tokens.py  types.py  urls.py  views.py
llm/migrations/: 0001_initial.py
ocr/: azure_ocr.py  forms.py  models.py  services.py  urls.py  views.py
ocr/migrations/: 0001_initial.py  0002_alter_ocrdocument_languages.py
ocr/templates/ocr/: document_detail.html  start.html
uploads/: models.py  urls.py  views.py
uploads/migrations/: 0001_initial.py
uploads/templates/uploads/: upload.html
