[tool.poetry]
name = "ocr-agent"
version = "0.1.0"
description = ""
authors = ["Abhishek Barve <barveabhishek.ab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
pymupdf = "^1.26.5"
pytesseract = "^0.3.13"
pillow = "^12.0.0"
dotenv = "^0.9.9"
azure-ai-documentintelligence = "^1.0.2"
openai = "^2.5.0"
tiktoken = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
